--- a/TRACE-FrontEnd/src/app.html
+++ b/TRACE-FrontEnd/src/app.html
@@ -2,8 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>TRACE</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
